# GIMM

./: .env  .eslintrc.cjs  README.md  README_zh-CN.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
.github/workflows/: alpha.yml  build.yml  check-backend.yml  check-frontend.yml  release.yml
scripts/: updater.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src-tauri/src/cmd/: categories.rs  file.rs
src-tauri/src/cmd/categories/: constant.rs
src/components/: EnhancedButton.vue  NaiveProvider.vue
src/i18n/: en.json  index.ts  zh-CN.json
src/i18n/locales/: en.json  zh-CN.json
src/layout/: index.vue
src/layout/components/: Language.vue  Menu.vue  index.ts
src/router/modules/: home.ts  mod.ts  tools.ts
src/stores/: app.ts  index.ts  setting.ts
src/styles/: common.scss  index.scss
src/styles/css/: index.css  reset.css
src/styles/scss/: naive-ui.scss
src/types/: components.d.ts  mod.d.ts  naive-ui.d.ts  route.d.ts  settings.d.ts
src/utils/: index.ts  invoke.ts  route.ts  storage.ts
src/views/home/: index.vue
src/views/mod/: constant.ts  handle.ts  index.vue
src/views/mod/components/: ModInfo.vue  SettingModal.vue  index.ts
